--- a/projects/editor/src/lib/property/boolean-property/boolean-property.component.html
+++ b/projects/editor/src/lib/property/boolean-property/boolean-property.component.html
@@ -28,10 +28,12 @@
     </mat-checkbox>
 </ng-template>
 
-<mat-menu #optionsMenu="matMenu">
+<mat-menu
+    #optionsMenu="matMenu"
+    class="editor-mat"
+>
     <button
         *ngIf="property.isRemovable"
-        class="editor-mat-menu-item"
         mat-menu-item
         color="warn"
         (click)="remove.emit()"
