--- a/projects/editor/src/lib/property/object-array-properties/array-property.component.html
+++ b/projects/editor/src/lib/property/object-array-properties/array-property.component.html
@@ -161,10 +161,12 @@
     </ng-container>
 </ng-template>
 
-<mat-menu #optionsMenu="matMenu">
+<mat-menu
+    #optionsMenu="matMenu"
+    class="editor-mat"
+>
     <button
         *ngIf="canAdd && property.childProperty"
-        class="editor-mat-menu-item"
         mat-menu-item
         (click)="onAddChild(property.childProperty.type)"
     >
@@ -173,7 +175,6 @@
     </button>
     <button
         *ngIf="canAdd && !property.childProperty"
-        class="editor-mat-menu-item"
         mat-menu-item
         [matMenuTriggerFor]="addMenu"
     >
@@ -182,7 +183,6 @@
     </button>
     <button
         *ngIf="property.isRemovable"
-        class="editor-mat-menu-item"
         mat-menu-item
         (click)="remove.emit()"
     >
@@ -194,7 +194,6 @@
 <mat-menu #addMenu="matMenu">
     <button
         *ngFor="let option of addOptions"
-        class="editor-mat-menu-item"
         mat-menu-item
         (click)="onAddChild(option)"
     >
