--- a/projects/editor/src/lib/form/form.component.html
+++ b/projects/editor/src/lib/form/form.component.html
@@ -52,7 +52,10 @@
     </div>
 </ng-template>
 
-<mat-menu #fieldOptionsMenu="matMenu">
+<mat-menu
+    #fieldOptionsMenu="matMenu"
+    class="editor-mat"
+>
     <ng-template
         matMenuContent
         let-options="options"
@@ -60,7 +63,6 @@
         <ng-container *ngFor="let option of options">
             <button
                 *ngIf="isCategoryOption(option)"
-                class="editor-mat-menu-item"
                 mat-menu-item
                 [matMenuTriggerFor]="fieldCategoryOptionsMenu"
                 [matMenuTriggerData]="{ children: option.children }"
@@ -79,7 +81,10 @@
     </ng-template>
 </mat-menu>
 
-<mat-menu #fieldCategoryOptionsMenu="matMenu">
+<mat-menu
+    #fieldCategoryOptionsMenu="matMenu"
+    class="editor-mat"
+>
     <ng-template
         matMenuContent
         let-children="children"
@@ -101,7 +106,6 @@
     let-name="name"
 >
     <button
-        class="editor-mat-menu-item"
         mat-menu-item
         (click)="onAddField(name)"
     >
