--- a/projects/editor/src/lib/property/chip-list-property/chip-list-property.component.html
+++ b/projects/editor/src/lib/property/chip-list-property/chip-list-property.component.html
@@ -64,7 +64,6 @@
             (optionSelected)="onSelected($event)"
         >
             <mat-option
-                class="editor-mat-option"
                 *ngFor="let option of filteredOptions$ | async"
                 [value]="option"
             >
@@ -74,10 +73,12 @@
     </mat-form-field>
 </ng-template>
 
-<mat-menu #optionsMenu="matMenu">
+<mat-menu
+    #optionsMenu="matMenu"
+    class="editor-mat"
+>
     <button
         *ngIf="property.isRemovable"
-        class="editor-mat-menu-item"
         mat-menu-item
         color="warn"
         (click)="remove.emit()"
