--- a/projects/editor/src/lib/property/textarea-property/textarea-property.component.html
+++ b/projects/editor/src/lib/property/textarea-property/textarea-property.component.html
@@ -42,10 +42,12 @@
     </mat-form-field>
 </ng-template>
 
-<mat-menu #optionsMenu="matMenu">
+<mat-menu
+    #optionsMenu="matMenu"
+    class="editor-mat"
+>
     <button
         *ngIf="property.isRemovable"
-        class="editor-mat-menu-item"
         mat-menu-item
         color="warn"
         (click)="remove.emit()"
