--- a/projects/editor/src/lib/edit-field/styles/style-option/style-option.component.html
+++ b/projects/editor/src/lib/edit-field/styles/style-option/style-option.component.html
@@ -1,9 +1,10 @@
 <mat-form-field
     *ngIf="!breakpoint.value || option.hasBreakpoints"
-    appearance="fill"
+    subscriptSizing="dynamic"
 >
     <mat-label>{{ option.name }}</mat-label>
     <mat-select
+        panelClass="editor-mat"
         [value]="selectedVariant"
         (selectionChange)="onVariantSelected($event.value)"
     >
