--- a/projects/editor/src/lib/json-dialog/json-dialog.component.html
+++ b/projects/editor/src/lib/json-dialog/json-dialog.component.html
@@ -1,10 +1,7 @@
 <h2 mat-dialog-title>{{ data.title }}</h2>
 <mat-dialog-content>
     <form #form="ngForm">
-        <mat-form-field
-            *ngIf="data.name"
-            appearance="fill"
-        >
+        <mat-form-field *ngIf="data.name">
             <mat-label>Name</mat-label>
             <input
                 #nameModel="ngModel"
@@ -19,10 +16,7 @@
             <mat-error *ngIf="nameModel.errors?.pattern">Invalid pattern</mat-error>
         </mat-form-field>
         <div class="json-field-wrapper">
-            <mat-form-field
-                class="json-field"
-                appearance="fill"
-            >
+            <mat-form-field class="json-field">
                 <mat-label>JSON</mat-label>
                 <editor-text-editor
                     class="text-editor"
