--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="app-header">
     <div class="app-title">Formly Editor</div>
     <div class="app-actions">
-        <mat-form-field appearance="fill">
+        <mat-form-field subscriptSizing="dynamic">
             <mat-label>Formly UI</mat-label>
             <mat-select [value]="currPath$ | async">
                 <mat-option
