--- a/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.scss
+++ b/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.scss
@@ -56,16 +56,24 @@ header {
         opacity: 1;
     }
 
-    .mat-icon-button {
+    .mat-mdc-icon-button {
         height: 20px;
         width: 20px;
         line-height: 20px;
+        padding: 0;
 
         .mat-icon {
             font-size: 16px;
             height: 18px;
             width: 18px;
             line-height: 18px;
+        }
+
+        ::ng-deep {
+            .mat-mdc-button-touch-target {
+                height: 20px;
+                width: 20px;
+            }
         }
     }
 }
