--- a/projects/editor/src/lib/edit-field/edit-field.component.html
+++ b/projects/editor/src/lib/edit-field/edit-field.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group mat-stretch-tabs>
+<mat-tab-group>
     <mat-tab label="Properties">
         <div class="tree-container">
             <editor-object-property
