--- a/projects/editor/src/lib/edit-field/styles/styles.component.scss
+++ b/projects/editor/src/lib/edit-field/styles/styles.component.scss
@@ -4,7 +4,7 @@
 }
 
 :host::ng-deep {
-    .mat-tab-header {
+    .mat-mdc-tab-header {
         display: none;
     }
 
@@ -17,8 +17,7 @@
             grid-column-end: span 2;
         }
     }
-
-    .mat-tab-body-content {
+    .mat-mdc-tab-body-content {
         padding: 8px;
         box-sizing: border-box;
     }
@@ -33,7 +32,7 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
 
-.mat-tab-group {
+.mat-mdc-tab-group {
     flex-grow: 1;
     overflow: auto;
 }
