--- a/projects/editor/src/lib/form/form.component.scss
+++ b/projects/editor/src/lib/form/form.component.scss
@@ -4,10 +4,10 @@
 
     ::ng-deep {
         .tab-group {
-            & > .mat-tab-header {
+            & > .mat-mdc-tab-header {
                 display: none;
             }
-            & > .mat-tab-body-wrapper > .mat-tab-body > .mat-tab-body-content {
+            & > .mat-mdc-tab-body-wrapper > .mat-mdc-tab-body > .mat-mdc-tab-body-content {
                 padding: 8px;
                 box-sizing: border-box;
             }
