--- a/projects/editor/src/lib/property/textarea-property/textarea-property.component.html
+++ b/projects/editor/src/lib/property/textarea-property/textarea-property.component.html
@@ -15,6 +15,7 @@
         <mat-form-field
             class="property-field"
             appearance="outline"
+            subscriptSizing="dynamic"
         >
             <textarea
                 matInput
@@ -29,7 +30,7 @@
 </editor-tree-item>
 
 <ng-template #simplifiedView>
-    <mat-form-field appearance="fill">
+    <mat-form-field subscriptSizing="dynamic">
         <mat-label>{{ property.name ? property.name : property.key }}</mat-label>
         <textarea
             matInput
