--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,4 +1,6 @@
+@use 'sass:map';
 @use '@angular/material' as mat;
+@use '@material/textfield';
 
 @include mat.core();
 
@@ -6,6 +8,7 @@ $primary-palette: mat.define-palette(mat.$indigo-palette, 500);
 $accent-palette: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 $typography: mat.define-typography-config();
+$typography: map.set($typography, body-1, font-size, 14px);
 
 $theme: mat.define-light-theme(
     (
@@ -18,3 +21,9 @@ $theme: mat.define-light-theme(
 );
 
 @include mat.all-component-themes($theme);
+@include mat.typography-hierarchy($theme);
+
+// Reduce form-field size
+// Workaround for bug - https://github.com/angular/components/issues/26579
+textfield.$minimum-height-for-filled-label: 10px;
+@include mat.form-field-density(-2);
