--- a/projects/editor/src/lib/property/object-array-properties/object-property.component.html
+++ b/projects/editor/src/lib/property/object-array-properties/object-property.component.html
@@ -86,6 +86,18 @@
             >
             </editor-chip-list-property>
 
+            <editor-select-property
+                *ngSwitchCase="typeofProperty.SELECT"
+                [treeLevel]="childrenTreeLevel"
+                [path]="getChildPath(child.key)"
+                [property]="propertyService.getAsSelectProperty(child)"
+                [target]="target"
+                [treeMode]="treeMode"
+                (remove)="onRemoveChild(i)"
+                (targetChanged)="targetChanged.emit($event)"
+            >
+            </editor-select-property>
+
             <editor-textarea-property
                 *ngSwitchCase="typeofProperty.TEXTAREA"
                 [treeLevel]="childrenTreeLevel"
