feat(formly-field): add support for hidden fields

--- a/projects/editor/src/lib/editor.component.html
+++ b/projects/editor/src/lib/editor.component.html
@@ -131,7 +131,7 @@
 
             <editor-edit-field
                 mainContent
-                [hidden]="!activeForm?.fields.length"
+                [attr.editor-hidden]="!activeForm?.fields.length"
                 [resizeTabHeader$]="resizeEnd$"
                 (fieldChanged)="onActiveFieldChanged($event)"
             >
