--- a/projects/editor/src/lib/field-tree-item/field-tree-item.component.html
+++ b/projects/editor/src/lib/field-tree-item/field-tree-item.component.html
@@ -11,7 +11,10 @@
     (isExpandedChange)="onSelected()"
 >
     <ng-container headerContent>
-        {{ fieldInfo.name | fieldName : field.key }}
+        <span class="header">
+            <mat-icon *ngIf="this.field.hide">visibility_off</mat-icon>
+            <span>{{ fieldInfo.name | fieldName : field.key }}</span>
+        </span>
     </ng-container>
 
     <ng-container childrenContent>
