--- a/projects/editor/src/lib/json-dialog/json-dialog.component.html
+++ b/projects/editor/src/lib/json-dialog/json-dialog.component.html
@@ -44,7 +44,7 @@
                 <input
                     #fileSelect
                     type="file"
-                    hidden
+                    editor-hidden="true"
                     required
                     [accept]="'.json, .txt'"
                     (input)="onFileChanged()"
