fix(field-tree-item): expand fields in active field path

--- a/projects/editor/src/lib/field-tree-item/field-tree-item.component.html
+++ b/projects/editor/src/lib/field-tree-item/field-tree-item.component.html
@@ -8,7 +8,7 @@
     [optionsMenu]="optionsMenu"
     [dragSource]="dnd.dragSource"
     [dropTarget]="dnd.dropTarget"
-    (isExpandedChange)="onSelected()"
+    (isExpandedChange)="onSelected($event)"
 >
     <ng-container headerContent>
         <span class="header">
@@ -24,7 +24,6 @@
             [index]="index"
             [fieldOptions]="fieldOptions"
             [treeLevel]="treeLevel + 1"
-            (expandParent)="onExpandParent()"
         >
         </editor-field-tree-item>
     </ng-container>
