--- a/projects/editor/src/lib/tree-item/tree-item.component.html
+++ b/projects/editor/src/lib/tree-item/tree-item.component.html
@@ -11,6 +11,7 @@
         [style.margin-left.px]="treeLevelPadding"
         mat-icon-button
         [disabled]="!isExpandable"
+        (click)="onToggle($event)"
     >
         <mat-icon
             class="expand-icon"
