--- a/projects/editor/src/lib/custom-formly/formly-form/formly-form.component.scss
+++ b/projects/editor/src/lib/custom-formly/formly-form/formly-form.component.scss
@@ -1,3 +1,13 @@
 :host {
     display: block;
 }
+
+.form-error {
+    display: flex;
+    align-items: center;
+    column-gap: 4px;
+
+    .mat-icon {
+        flex-shrink: 0;
+    }
+}
