--- a/projects/editor/src/lib/edit-field/edit-field.component.html
+++ b/projects/editor/src/lib/edit-field/edit-field.component.html
@@ -5,6 +5,7 @@
                 [target]="field$ | async"
                 [property]="property$ | async"
                 [isExpanded]="true"
+                [useExpansionPanel]="false"
                 (targetChanged)="onFieldChanged($event)"
             >
             </editor-object-property>
