--- a/projects/editor/src/lib/property/input-property/input-property.component.html
+++ b/projects/editor/src/lib/property/input-property/input-property.component.html
@@ -33,6 +33,7 @@
             matInput
             [formControl]="formControl"
             [type]="property.type | lowercase"
+            [placeholder]="property.placeholder"
         />
     </mat-form-field>
 </ng-template>
